# CL-IRC

./: .gitignore  Cargo.toml
doc/: todo.md
src/: client.rs  server.rs
