[package]
name = "clirc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
